# ZeloPy

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
include/: Zelo.h
prototype/: G.py  common.py  main.py  runtime.py  type_model.py
prototype/test/: __init__.py  test_main.py
pythonvm/: build_vs2019.bat
src/: CMakeLists.txt  Engine.cpp  Engine.h  ZeloPreCompiledHeader.h  ZeloPrerequisites.h  common.cpp  common.h  cpp_lang_patch.h  main.cpp
src/code/: BinaryFileParser.cpp  BinaryFileParser.h  ByteCode.cpp  ByteCode.h  code.cpp  code.h
src/inc/: railgun.h
src/object/: CodeObject.cpp  CodeObject.h  FunctionObject.cpp  FunctionObject.h  HiInteger.cpp  HiInteger.h  HiObject.cpp  HiObject.h  HiString.cpp  HiString.h  Klass.cpp  Klass.h  object.h
src/runtime/: FrameObject.cpp  FrameObject.h  Interpreter.cpp  Interpreter.h  StringTable.cpp  StringTable.h  Universe.cpp  Universe.h
src/test/: CMakeLists.txt  Test_Generated.cpp  Test_Generated.h  common_test.cpp  common_test.h  test_main.cpp
src/test/TEST-25-BufferedInputStream/: TEST_25_BufferedInputStream.cpp  TEST_25_BufferedInputStream.h
src/test/TEST-26-BinaryFileParser/: TEST_26_BinaryFileParser.cpp  TEST_26_BinaryFileParser.h
src/util/: ArrayList.cpp  ArrayList.h  BufferedInputStream.cpp  BufferedInputStream.h  Map.cpp  Map.h  util.h
tool/: build_clean.bat  build_vs2017.bat  build_vs2019.bat
tool/cpp_test_generator/: cpp_test_generator.py
tool/pyc_compiler/: pyc_compiler.bat
tool/pyc_decompiler/: .gitignore  build.bat  chrysanthemum.py  hexedit.py  qt.conf  requirements.txt
